add spanish description

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -18,3 +18,5 @@ document.addEventListener("DOMContentLoaded", function() {
 });
 </script>
 {{ end }}
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.1/styles/monokai.min.css" integrity="sha512-ade8vHOXH67Cm9z/U2vBpckPD1Enhdxl3N05ChXyFx5xikfqggrK4RrEele+VWY/iaZyfk7Bhk6CyZvlh7+5JQ==" crossorigin="anonymous">
